--- a/ms-bank-customer/src/main/resources/application.properties
+++ b/ms-bank-customer/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=ms-bank-customer
 spring.data.mongodb.uri=mongodb://localhost:27017/customerdb
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.file.name=logs/app.log
 server.port=8081
+
